# proface-pre

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/proface/preprocessor/: __init__.py  cli.py
src/proface/preprocessor/cli/: __init__.py
tests/: .gitignore  README.md  e0.txt  e1.toml  e2.toml  e3.toml  e4.toml  e5.toml
