# SPDX-FileCopyrightText: 2025 ProFACE developers
#
# SPDX-License-Identifier: MIT

[project]
dynamic = ["version"]
name = "proface-pre"
description = "Main ProFACE preprocessor"
readme = "README.md"
authors = [
    { name = "Stefano Miccoli", email = "stefano.miccoli@polimi.it" }
]
requires-python = ">=3.12"
dependencies = [
    "click >= 8.1.8",
    "h5py >= 3.13.0",
]
license = "MIT"

[project.scripts]
proface-pre = "proface.preprocessor.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

#
# hatch
#
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/proface/preprocessor/_version.py"
[tool.hatch.build.targets.wheel]
packages = ["src/proface"]

#
# ruff
#
[tool.ruff]
line-length = 79
target-version = "py312"

extend-exclude = ["_version.py"]

[tool.ruff.lint]
select = ["A", "ARG", "B", "BLE", "C4", "C90", "COM818",
  "E", "W", "EM", "F", "FA", "FBT", "FLY", "G", "I", "ICN",
  "INP", "INT", "ISC", "N", "NPY", "PERF", "PGH", "PIE",
  "PLE", "PLR", "PLW", "PT", "PYI", "RET", "RUF", "S",
  "SIM", "SLF", "SLOT", "T10", "T20", "TCH", "TRY", "TID",
  "UP", "YTT",
]
ignore = ["S101", "PT015", "B011", "TRY400"]


[tool.ruff.lint.isort]
known-first-party = ["proface"]
